[package]
name = "hello-ort"
version = "0.0.0"
edition = "2024"

[dependencies]
ort = { git = "https://github.com/pykeio/ort", rev = "6e44003", features = [
    "ndarray", "download-binaries", "fetch-models", "openvino"
], default-features = false }
ndarray = "0.16"
anyhow = "1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"